[gd_scene load_steps=6 format=3 uid="uid://k6wivl0t5xt7"]

[ext_resource type="QuadMesh" uid="uid://dbr5evacciwho" path="res://mahous/undine/drop.tres" id="1_h7slj"]
[ext_resource type="Script" path="res://mahous/undine/sploosh.gd" id="1_md4wf"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b4of2"]
emission_shape = 3
emission_box_extents = Vector3(0.3, 0.3, 0.3)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 3.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g1oko"]
spread = 180.0
flatness = 1.0
initial_velocity_min = 4.0
initial_velocity_max = 8.0
gravity = Vector3(0, -1, 0)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ytysm"]
height = 0.2
radius = 3.0

[node name="sploosh" type="Area3D"]
collision_layer = 0
collision_mask = 4
monitoring = false
monitorable = false
script = ExtResource("1_md4wf")

[node name="down_particles" type="GPUParticles3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 4, 0)
emitting = false
amount = 200
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_b4of2")
draw_pass_1 = ExtResource("1_h7slj")

[node name="out_particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
gi_mode = 0
emitting = false
amount = 200
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_g1oko")
draw_pass_1 = ExtResource("1_h7slj")

[node name="shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("CylinderShape3D_ytysm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
